--- a/index.html
+++ b/index.html
@@ -1,8 +1,2 @@
-<h1>Web Development</h1>
-<h2>FrontEnd Development</h2>
-<h3>---1. HTML</h3>
-<h3>---2. CSS</h3> 
-<h4>------2.1 Bootstrap</h4> 
-<h3>----3. JavaScript</h3>
-<h4>------3.1 Angular JS</h4>
-<h4>------3.2 React JS</h4>
+<img src="vijay.jpg"><br>
+<a href="https://youtu.be/3wDiqlTNlfQ?si=C_0c9uX2fMH_YGM4">Click here to play NAAN READY THA VARAVA</a>
